--- a/rpi-led-matrix/Cargo.toml
+++ b/rpi-led-matrix/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "rpi-led-matrix"
 description = "Bindings for Hzeller's RPi-RGB-Led-Matrix"
-version = "0.4.0"
+version = "0.1.0"
 authors = [
     "Vincent Pasquier <vincentpasquier@posteo.net>",
     "Tyler Holmes <tyler@holmesengineering.com>",
     "Broderick Carlin <broderick.carlin@gmail.com>",
+    "Philipp Compensis <github@0xg.de>",
 ]
-repository = "https://github.com/rust-rpi-led-matrix/rust-rpi-rgb-led-matrix"
-homepage = "https://docs.rs/rpi-led-matrix/"
+repository = "https://github.com/compensis/rust-rpi-rgb-led-matrix"
 license = "GPL-3.0"
 readme = "README.md"
 edition = "2021"
@@ -17,7 +17,7 @@ categories = ["embedded"]
 
 [dependencies]
 libc = "0.2"
-rpi-led-matrix-sys = { version = "0.2", path = "../rpi-led-matrix-sys" }
+rpi-led-matrix-sys = { version = "0.1", path = "../rpi-led-matrix-sys" }
 embedded-graphics-core = { version = "0.4", optional = true }
 clap = { version = "3.0", optional = true, features = ["cargo"] }
 
